Compiler2019-master/Lab/Code/syntax.output
Terminals unused in grammar

   NEG


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC error RC
   16                | STRUCT error LC DefList RC

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC
   30       | error RC

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | error SEMI
   35     | Exp error
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | RETURN Exp error
   39     | IF LP Exp RP Stmt
   40     | IF LP Exp RP Stmt ELSE Stmt
   41     | IF LP Exp RP error ELSE Stmt
   42     | WHILE LP Exp RP Stmt

   43 DefList: Def DefList
   44        | %empty

   45 Def: Specifier DecList SEMI
   46    | Specifier error SEMI
   47    | Specifier DecList error

   48 DecList: Dec
   49        | Dec COMMA DecList

   50 Dec: VarDec
   51    | VarDec ASSIGNOP Exp

   52 Exp: Exp ASSIGNOP Exp
   53    | Exp AND Exp
   54    | Exp OR Exp
   55    | Exp RELOP Exp
   56    | Exp PLUS Exp
   57    | Exp MINUS Exp
   58    | Exp STAR Exp
   59    | Exp DIV Exp
   60    | LP Exp RP
   61    | MINUS Exp
   62    | NOT Exp
   63    | ID LP Args RP
   64    | ID LP RP
   65    | Exp LB Exp RB
   66    | Exp DOT ID
   67    | ID
   68    | INT
   69    | FLOAT
   70    | LP error RP
   71    | ID LP error RP
   72    | Exp LB error RB
   73    | error LB Exp RB

   74 Args: Exp COMMA Args
   75     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 15 16 22 25 30 34 35 38 41 46 47 70 71 72 73
ID <type_node> (258) 17 19 20 23 24 63 64 66 67 71
FLOAT <type_node> (259) 69
INT <type_node> (260) 21 68
SEMI <type_node> (261) 4 5 7 8 33 34 37 45 46
COMMA <type_node> (262) 10 26 49 74
ASSIGNOP <type_node> (263) 51 52
RELOP <type_node> (264) 55
PLUS <type_node> (265) 56
MINUS <type_node> (266) 57 61
AND <type_node> (267) 53
OR <type_node> (268) 54
STAR <type_node> (269) 58
DIV <type_node> (270) 59
DOT <type_node> (271) 66
NOT <type_node> (272) 62
TYPE <type_node> (273) 11
LP <type_node> (274) 23 24 39 40 41 42 60 63 64 70 71
RP <type_node> (275) 23 24 25 39 40 41 42 60 63 64 70 71
LB <type_node> (276) 21 22 65 72 73
RB <type_node> (277) 21 22 65 72 73
LC <type_node> (278) 13 15 16 29
RC <type_node> (279) 13 15 16 29 30
STRUCT <type_node> (280) 13 14 15 16
RETURN <type_node> (281) 37 38
IF <type_node> (282) 39 40 41
ELSE <type_node> (283) 40 41
WHILE <type_node> (284) 42
NEG (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program <type_node> (33)
    on left: 1, on right: 0
ExtDefList <type_node> (34)
    on left: 2 3, on right: 1 2
ExtDef <type_node> (35)
    on left: 4 5 6 7 8, on right: 2
ExtDecList <type_node> (36)
    on left: 9 10, on right: 4 10
Specifier <type_node> (37)
    on left: 11 12, on right: 4 5 6 7 28 45 46 47
StructSpecifier <type_node> (38)
    on left: 13 14 15 16, on right: 12
OptTag <type_node> (39)
    on left: 17 18, on right: 13 15
Tag <type_node> (40)
    on left: 19, on right: 14
VarDec <type_node> (41)
    on left: 20 21 22, on right: 9 10 21 22 28 50 51
FunDec <type_node> (42)
    on left: 23 24 25, on right: 6 7
VarList <type_node> (43)
    on left: 26 27, on right: 23 26
ParamDec <type_node> (44)
    on left: 28, on right: 26 27
CompSt <type_node> (45)
    on left: 29 30, on right: 6 36
StmtList <type_node> (46)
    on left: 31 32, on right: 29 31
Stmt <type_node> (47)
    on left: 33 34 35 36 37 38 39 40 41 42, on right: 31 39 40 41 42
DefList <type_node> (48)
    on left: 43 44, on right: 13 16 29 43
Def <type_node> (49)
    on left: 45 46 47, on right: 43
DecList <type_node> (50)
    on left: 48 49, on right: 45 47 49
Dec <type_node> (51)
    on left: 50 51, on right: 48 49
Exp <type_node> (52)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71 72 73, on right: 33 35 37 38 39 40 41 42 51 52 53 54 55 56
    57 58 59 60 61 62 65 66 72 73 74 75
Args <type_node> (53)
    on left: 74 75, on right: 63 74


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC error RC
   16                | STRUCT . error LC DefList RC

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 18 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   16 StructSpecifier: STRUCT error . LC DefList RC

    LC  shift, and go to state 22


State 11

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 12

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 23


State 13

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 16

   25 FunDec: error . RP

    RP  shift, and go to state 24


State 17

   20 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP

    LP  shift, and go to state 25

    $default  reduce using rule 20 (VarDec)


State 18

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


State 20

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB

    COMMA  shift, and go to state 27
    LB     shift, and go to state 28

    $default  reduce using rule 9 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 29
    SEMI   shift, and go to state 30
    LC     shift, and go to state 31

    CompSt  go to state 32


State 22

   16 StructSpecifier: STRUCT error LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 35


State 23

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error RC

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 44 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 37
    Def              go to state 35


State 24

   25 FunDec: error RP .

    $default  reduce using rule 25 (FunDec)


State 25

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 38
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 40
    ParamDec         go to state 41


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 42

    ExtDecList  go to state 43
    VarDec      go to state 20


State 28

   21 VarDec: VarDec LB . INT RB
   22       | VarDec LB . error RB

    error  shift, and go to state 44
    INT    shift, and go to state 45


State 29

   30 CompSt: error . RC

    RC  shift, and go to state 46


State 30

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 31

   29 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 35


State 32

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 33

   45 Def: Specifier . DecList SEMI
   46    | Specifier . error SEMI
   47    | Specifier . DecList error

    error  shift, and go to state 48
    ID     shift, and go to state 42

    VarDec   go to state 49
    DecList  go to state 50
    Dec      go to state 51


State 34

   16 StructSpecifier: STRUCT error LC DefList . RC

    RC  shift, and go to state 52


State 35

   43 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 35


State 36

   15 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 54


State 37

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 55


State 38

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 39

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 42

    VarDec  go to state 56


State 40

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 57


State 41

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 58

    $default  reduce using rule 27 (VarList)


State 42

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 43

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 44

   22 VarDec: VarDec LB error . RB

    RB  shift, and go to state 59


State 45

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 60


State 46

   30 CompSt: error RC .

    $default  reduce using rule 30 (CompSt)


State 47

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 61
    ID      shift, and go to state 62
    FLOAT   shift, and go to state 63
    INT     shift, and go to state 64
    MINUS   shift, and go to state 65
    NOT     shift, and go to state 66
    LP      shift, and go to state 67
    LC      shift, and go to state 31
    RETURN  shift, and go to state 68
    IF      shift, and go to state 69
    WHILE   shift, and go to state 70

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 71
    StmtList  go to state 72
    Stmt      go to state 73
    Exp       go to state 74


State 48

   46 Def: Specifier error . SEMI

    SEMI  shift, and go to state 75


State 49

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   50 Dec: VarDec .
   51    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 76
    LB        shift, and go to state 28

    $default  reduce using rule 50 (Dec)


State 50

   45 Def: Specifier DecList . SEMI
   47    | Specifier DecList . error

    error  shift, and go to state 77
    SEMI   shift, and go to state 78


State 51

   48 DecList: Dec .
   49        | Dec . COMMA DecList

    COMMA  shift, and go to state 79

    $default  reduce using rule 48 (DecList)


State 52

   16 StructSpecifier: STRUCT error LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


State 53

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 54

   15 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 55

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 56

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 28

    $default  reduce using rule 28 (ParamDec)


State 57

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 58

   26 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 80
    ParamDec         go to state 41


State 59

   22 VarDec: VarDec LB error RB .

    $default  reduce using rule 22 (VarDec)


State 60

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 61

   30 CompSt: error . RC
   34 Stmt: error . SEMI
   73 Exp: error . LB Exp RB

    SEMI  shift, and go to state 81
    LB    shift, and go to state 82
    RC    shift, and go to state 46


State 62

   63 Exp: ID . LP Args RP
   64    | ID . LP RP
   67    | ID .
   71    | ID . LP error RP

    LP  shift, and go to state 83

    $default  reduce using rule 67 (Exp)


State 63

   69 Exp: FLOAT .

    $default  reduce using rule 69 (Exp)


State 64

   68 Exp: INT .

    $default  reduce using rule 68 (Exp)


State 65

   61 Exp: MINUS . Exp

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 85


State 66

   62 Exp: NOT . Exp

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 86


State 67

   60 Exp: LP . Exp RP
   70    | LP . error RP

    error  shift, and go to state 87
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 88


State 68

   37 Stmt: RETURN . Exp SEMI
   38     | RETURN . Exp error

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 89


State 69

   39 Stmt: IF . LP Exp RP Stmt
   40     | IF . LP Exp RP Stmt ELSE Stmt
   41     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 90


State 70

   42 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 91


State 71

   36 Stmt: CompSt .

    $default  reduce using rule 36 (Stmt)


State 72

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 92


State 73

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 61
    ID      shift, and go to state 62
    FLOAT   shift, and go to state 63
    INT     shift, and go to state 64
    MINUS   shift, and go to state 65
    NOT     shift, and go to state 66
    LP      shift, and go to state 67
    LC      shift, and go to state 31
    RETURN  shift, and go to state 68
    IF      shift, and go to state 69
    WHILE   shift, and go to state 70

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 71
    StmtList  go to state 93
    Stmt      go to state 73
    Exp       go to state 74


State 74

   33 Stmt: Exp . SEMI
   35     | Exp . error
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB

    error     shift, and go to state 94
    SEMI      shift, and go to state 95
    ASSIGNOP  shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    DOT       shift, and go to state 104
    LB        shift, and go to state 105


State 75

   46 Def: Specifier error SEMI .

    $default  reduce using rule 46 (Def)


State 76

   51 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 106


State 77

   47 Def: Specifier DecList error .

    $default  reduce using rule 47 (Def)


State 78

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 79

   49 DecList: Dec COMMA . DecList

    ID  shift, and go to state 42

    VarDec   go to state 49
    DecList  go to state 107
    Dec      go to state 51


State 80

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 81

   34 Stmt: error SEMI .

    $default  reduce using rule 34 (Stmt)


State 82

   73 Exp: error LB . Exp RB

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 108


State 83

   63 Exp: ID LP . Args RP
   64    | ID LP . RP
   71    | ID LP . error RP

    error  shift, and go to state 109
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67
    RP     shift, and go to state 110

    Exp   go to state 111
    Args  go to state 112


State 84

   73 Exp: error . LB Exp RB

    LB  shift, and go to state 82


State 85

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   61    | MINUS Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB

    STAR  shift, and go to state 102
    DIV   shift, and go to state 103
    DOT   shift, and go to state 104
    LB    shift, and go to state 105

    $default  reduce using rule 61 (Exp)


State 86

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   62    | NOT Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB

    DOT  shift, and go to state 104
    LB   shift, and go to state 105

    $default  reduce using rule 62 (Exp)


State 87

   70 Exp: LP error . RP
   73    | error . LB Exp RB

    RP  shift, and go to state 113
    LB  shift, and go to state 82


State 88

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   60    | LP Exp . RP
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    DOT       shift, and go to state 104
    RP        shift, and go to state 114
    LB        shift, and go to state 105


State 89

   37 Stmt: RETURN Exp . SEMI
   38     | RETURN Exp . error
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB

    error     shift, and go to state 115
    SEMI      shift, and go to state 116
    ASSIGNOP  shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    DOT       shift, and go to state 104
    LB        shift, and go to state 105


State 90

   39 Stmt: IF LP . Exp RP Stmt
   40     | IF LP . Exp RP Stmt ELSE Stmt
   41     | IF LP . Exp RP error ELSE Stmt

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 117


State 91

   42 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 118


State 92

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 93

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


State 94

   35 Stmt: Exp error .

    $default  reduce using rule 35 (Stmt)


State 95

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 96

   52 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 119


State 97

   55 Exp: Exp RELOP . Exp

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 120


State 98

   56 Exp: Exp PLUS . Exp

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 121


State 99

   57 Exp: Exp MINUS . Exp

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 122


State 100

   53 Exp: Exp AND . Exp

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 123


State 101

   54 Exp: Exp OR . Exp

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 124


State 102

   58 Exp: Exp STAR . Exp

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 125


State 103

   59 Exp: Exp DIV . Exp

    error  shift, and go to state 84
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 126


State 104

   66 Exp: Exp DOT . ID

    ID  shift, and go to state 127


State 105

   65 Exp: Exp LB . Exp RB
   72    | Exp LB . error RB

    error  shift, and go to state 128
    ID     shift, and go to state 62
    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    MINUS  shift, and go to state 65
    NOT    shift, and go to state 66
    LP     shift, and go to state 67

    Exp  go to state 129


State 106

   51 Dec: VarDec ASSIGNOP Exp .
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 96
    RELOP     shift, and go to state 97
    PLUS      shift, and go to state 98
    MINUS     shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    DOT       shift, and go to state 104
    LB        shift, and go to state 105

    $default  reduce using rule 51 (Dec)


State 107

   49 DecList: Dec COMMA DecList .

    $default  reduce using rule 49 (DecList)


State 108

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   72    | Exp . LB error RB
   73    | error LB Exp . RB
